--- a/src/app/burger-menu/burger-menu.component.scss
+++ b/src/app/burger-menu/burger-menu.component.scss
@@ -70,21 +70,19 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 4px;
+    gap: 8px;
     position: absolute;
     bottom: 48px;
+    cursor: pointer;
 
     p {
-        font-size: 12px;
-        line-height: 12px;
+        display: contents;
     }
 }
 
 .language-icon {
-    width: 16px;
-    height: 16px;
-    // width: 27.6px;
-    // height: 27.6px;
+    width: 28px;
+    height: 28px;
 }
 
 .languageSelection-content {
@@ -96,8 +94,8 @@
     display: flex;
 
     a {
-        font-size: 12px;
-        line-height: 12px;
+        font-size: 16px;
+        line-height: 16px;
     }
 }
 
