--- a/src/app/contact/contact-mobile.component.scss
+++ b/src/app/contact/contact-mobile.component.scss
@@ -65,6 +65,7 @@
 @media screen and (max-width: 768px) {
     .contact-content {
         max-width: 768px;
+        padding: 37px 25px;
     }
 
     .contact-div {
