--- a/src/app/imprint/imprint.component.scss
+++ b/src/app/imprint/imprint.component.scss
@@ -42,9 +42,16 @@
     transition: 125ms ease-in-out;
 }
 
+@media screen and (max-width: 1440px) {
+    .imprint-content {
+        max-width: 1440px;
+        padding: 37px 50px;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .imprint-content {
-        padding: 37px 50px;
+        max-width: 1024px;
     }
 
     .arrow-div {
@@ -52,9 +59,17 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .imprint-content {
+        max-width: 768px;
+        padding: 37px 25px;
+    }
+}
+
 @media screen and (max-width: 390px) {
     .imprint-content {
-        
+        max-width: 390px;
+
         p {
             margin-bottom: unset;
         }
