--- a/src/app/in-progress/in-progress.component.scss
+++ b/src/app/in-progress/in-progress.component.scss
@@ -9,7 +9,7 @@
 .in-progress-content {
     width: 100%;
     max-width: 1440px;
-    padding: 37px 50px;
+    padding: 37px 100px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -26,3 +26,18 @@
         color: white;
     }
 }
+
+@media screen and (max-width: 1440px) {
+    .in-progress-content {
+        max-width: 1440px;
+        padding: 37px 50px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .in-progress-content {
+        max-width: 768px;
+        padding: 37px 25px;
+    }
+}
+
