--- a/src/app/mail/mail-mobile.component.scss
+++ b/src/app/mail/mail-mobile.component.scss
@@ -1,6 +1,7 @@
 @media screen and (max-width: 1440px) {
     .mail-content  {
         max-width: 1440px;
+        padding: 37px 50px;
     }
 }
 
@@ -17,6 +18,7 @@
 @media screen and (max-width: 768px) {
     .mail-content  {
         max-width: 768px;
+        padding: 37px 25px;
 
         img {
             width: 64px;
