--- a/src/app/my-skills/my-skills-mobile.component.scss
+++ b/src/app/my-skills/my-skills-mobile.component.scss
@@ -1,7 +1,7 @@
 @media screen and (max-width: 1440px) {
     .skills-section {
         max-width: 1440px;
-        padding: 37px 0px 37px 0px;
+        padding: 37px 50px;
     }
 
     .skills-content {
@@ -49,18 +49,30 @@
 }
 
 @media screen and (max-width: 1200px) {
+    .skills-section {
+        max-width: 1200px;
+    }
+
     .icon-div {
         gap: 70px;
     }
 }
 
 @media screen and (max-width: 1011px) {
+    .skills-section {
+        max-width: 1011px;
+    }
+
     .button-div {
         top: 635px;
     }
 }
 
 @media screen and (max-width: 1100px) {
+    .skills-section {
+        max-width: 1100px;
+    }
+
     .icon-div {
         gap: 40px;
     }
@@ -139,6 +151,10 @@
 }
 
 @media screen and (max-width: 707px) {
+    .skills-section {
+        max-width: 707px;
+    }
+
     .button-div {
         top: 835px;
     }
@@ -146,6 +162,10 @@
 
 
 @media screen and (max-width: 530px) {
+    .skills-section {
+        max-width: 530px;
+    }
+
     .button-div {
         top: 1235px;
     }
@@ -161,8 +181,21 @@
     }
 }
 
+@media screen and (max-width: 354px) {
+    .skills-section {
+        max-width: 354px;
+    }
+
+    .button-div {
+        top: 2235px;
+    }
+}
 
 @media screen and (max-width: 375px) {
+    .skills-section {
+        max-width: 375px;
+    }
+
     .skills {
         scroll-margin-top: 120px;
     }
@@ -186,9 +219,5 @@
 @media screen and (max-width: 320px) {
     .skills-section {
         max-width: 320px;
-    }
-
-    .button-div {
-        top: 2235px;
     }
 }
