--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -9,7 +9,7 @@
     width: 100%;
     max-width: 1440px;
     height: 100%;
-    padding: 37px 0px 37px 100px;
+    padding: 37px 100px;
     position: relative;
     overflow-y: visible;
     // overflow-x: clip;
