--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -8,7 +8,7 @@
 .portfolio-content {
     width: 100%;
     max-width: 1440px;
-    padding: 37px 0px 37px 50px;
+    padding: 37px 100px;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,6 @@ h2 {
 
 p {
     margin-top: 32px;
-    padding-right: 50px;
 }
 
 .portfolio-mobileview {
@@ -68,7 +67,6 @@ p {
 
 .work {
     position: relative;
-    padding-right: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
