--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -41,9 +41,16 @@
     transition: 125ms ease-in-out;
 }
 
+@media screen and (max-width: 1440px) {
+    .privacy-policy-content {
+        max-width: 1440px;
+        padding: 37px 50px;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .privacy-policy-content {
-        padding: 37px 50px;
+        max-width: 1024px;
     }
 
     .arrow-div {
@@ -51,9 +58,16 @@
     }
 }
 
+@media screen and (max-width: 768px) {
+    .privacy-policy-content {
+        max-width: 768px;
+        padding: 37px 25px;
+    }
+}
+
 @media screen and (max-width: 390px) {
     .privacy-policy-content {
-
+        max-width: 390px;
         p {
             margin-bottom: unset;
         }
