--- a/src/app/shared/components/header/header-mobile.component.scss
+++ b/src/app/shared/components/header/header-mobile.component.scss
@@ -1,6 +1,12 @@
+@media screen and (max-width: 1440px) {
+    .header {
+        max-width: 1440px;
+        padding: 37px 50px;
+    }
+}
+
 @media screen and (max-width: 1024px) {
     .header {
-        padding: 37px 50px;
         max-width: 1024px;
     }
 }
@@ -8,6 +14,7 @@
 @media screen and (max-width: 768px) {
     .header {
         max-width: 768px;
+        padding: 37px 25px;
     }
 
     .header-links {
@@ -21,7 +28,6 @@
 
 @media screen and (max-width: 425px) {
     .header {
-        padding: 37px 25px;
         max-width: 425px;
     }
 }
