--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -35,14 +35,18 @@
 
 .portfolio-header {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
+    justify-content: flex-end;
+}
+
+.portfolio-header-content {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
 }
 
 h2 {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
+
 }
 
 p {
@@ -54,12 +58,16 @@ p {
 }
 
 .border-left {
+    position: absolute;
+    left: 69px;
     margin-right: 10px;
     width: 109px;
     border-top: 4px solid var(--purple);
 }
 
 .border-right {
+    position: absolute;
+    right: 0;
     margin-left: 10px;
     width: 484px;
     border-top: 4px solid var(--purple);
