--- a/src/app/work/work-mobile.component.scss
+++ b/src/app/work/work-mobile.component.scss
@@ -55,7 +55,7 @@
         align-items: center;
 
         h6 {
-            width: 263px;
+            width: 263px; ////////////////////////////////////////////////////////////////////////////////
         }
 
         p {
