--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,7 +1,9 @@
 <div class="portfolio" id="portfolio">
     <div class="portfolio-content">
-        <!-- <img src="assets/img/shadows/portfolio-1.svg" alt="Shadow" class="shadow shadow-1">   
-        <img src="assets/img/shadows/portfolio-2.svg" alt="Shadow" class="shadow shadow-2"> -->
+        <div class="shadow-content">
+            <img src="assets/img/shadows/portfolio-1.svg" alt="Shadow" class="shadow shadow-1">   
+            <img src="assets/img/shadows/portfolio-2.svg" alt="Shadow" class="shadow shadow-2">
+        </div>
         <div class="portfolio-header">
             <div class="portfolio-mobileview" [class.animationFadeIn]="isVisible">
                 <div class="portfolio-header-content">
@@ -19,6 +21,6 @@
 
             </div>
         </div>
-        <!-- <app-work class="work"></app-work> -->
+        <app-work class="work"></app-work>
     </div>
 </div>
