--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -19,7 +19,7 @@
                 <p>Hallo, ich bin Frontend-Entwickler mit Sitz in Kreuzlingen, Schweiz. Ich habe eine Leidenschaft für
                     die Erstellung effizienter und innovativer Web-Lösungen. Mein vielseitiges Können umfasst unter
                     anderem fundierte Kenntnisse in JavaScript, Angular, REST APIs und mehr. Mein Ziel ist es, meine
-                    Laufbahn als Fullstack-Entwickler fortzusetzen und mein Informatikstudium abzuschließen.</p>
+                    Laufbahn als Fullstack-Entwickler fortzusetzen und mein Informatikstudium abzuschliessen.</p>
                 }
                 <div class="keys-section">
                     <div class="keys-div">
@@ -32,7 +32,7 @@
                         }
                         @if (languageService.language == 'German') {
                         <p>Ich bin fasziniert vom Prozess, neue Web-Lösungen zu schaffen und kontinuierlich meine
-                            Fähigkeiten zu erweitern. Es bereitet mir große Freude, Probleme zu lösen und komplexe
+                            Fähigkeiten zu erweitern. Es bereitet mir grosse Freude, Probleme zu lösen und komplexe
                             Herausforderungen in einfache, benutzerfreundliche Erlebnisse zu verwandeln. Meine Neugier
                             treibt mich dazu, neue Technologien zu erkunden und stets auf dem Laufenden mit
                             Branchentrends zu bleiben.</p>
@@ -46,7 +46,7 @@
                             technical expertise and creative thinking.</p>
                         }
                         @if (languageService.language == 'German') {
-                        <p>Neben dem Programmieren genieße ich die Zusammenarbeit mit anderen, das Teilen von Wissen und
+                        <p>Neben dem Programmieren geniesse ich die Zusammenarbeit mit anderen, das Teilen von Wissen und
                             das Lernen aus verschiedenen Perspektiven. Ich bin der Überzeugung, dass die besten Lösungen
                             aus einer Kombination von technischem Fachwissen und kreativem Denken entstehen.</p>
                         }
