--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -30,6 +30,7 @@
     width: 100%;
     position: relative;
     bottom: -515px;
+    // bottom: -234px;
     z-index: 2;
     -webkit-user-select: none;
     user-select: none;
@@ -135,6 +136,7 @@
 .right-section {
     text-align: center;
     position: relative;
+    bottom: 164px;
     z-index: 4;
 }
 
