--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -8,7 +8,7 @@
             <div class="portfolio-mobileview" [class.animationFadeIn]="isVisible">
                 <div class="portfolio-header-content">
                     <div class="border-left"></div>
-                    <h2>Portfolio</h2>
+                    <h2 class="title">Portfolio</h2>
                     <div class="border-right"></div>
                 </div>
                 @if (languageService.language == 'English') {
