--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -63,6 +63,10 @@
         max-width: 768px;
         padding: 37px 25px;
     }
+
+    .arrow-div {
+        right: 41px;
+    }
 }
 
 @media screen and (max-width: 390px) {
