--- a/src/app/above-the-fold/above-the-fold-mobile.component.scss
+++ b/src/app/above-the-fold/above-the-fold-mobile.component.scss
@@ -1,6 +1,42 @@
+@media screen and (max-height: 900px) {
+    .shape {
+        bottom: -277px;
+    }
+}
+
+@media screen and (min-height: 900px) and (max-height: 1000px) {
+    .shape {
+        bottom: -372px;
+    }
+}
+
+@media screen and (min-height: 1000px) and (max-height: 1100px) {
+    .shape {
+        bottom: -379px;
+    }
+}
+
+@media screen and (min-height: 1100px) and (max-height: 1200px) {
+    .shape {
+        bottom: -430px;
+    }
+}
+
+@media screen and (min-height: 1200px) and (max-height: 1300px) {
+    .shape {
+        bottom: -480px;
+    }
+}
+
+@media screen and (min-height: 1300px) and (max-height: 1368px) {
+    .shape {
+        bottom: -520px;
+    }
+}
+
 @media screen and (min-width: 2300px) {
     .atf-content {
-        bottom: 365px;
+        bottom: 305px;
     }
 }
 
