--- a/src/app/in-progress/in-progress.component.scss
+++ b/src/app/in-progress/in-progress.component.scss
@@ -17,12 +17,13 @@
     align-items: center;
     gap: 64px;
 
-    img{
+    img {
         width: 128px;
         height: 128px;
     }
 
-    h6, h5 {
+    h6,
+    h5 {
         color: white;
     }
 }
@@ -40,4 +41,3 @@
         padding: 37px 25px;
     }
 }
-
