--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,6 +1,5 @@
 <div id="about-me" class="about-me">
     <div class="about-me-section">
-        <!-- <img src="/assets/img/shadows/about-me.svg" alt="Shadow" class="shadow"> -->
         <div class="about-me-content" [class.animationFadeIn]="isVisible">
             @if (languageService.language == 'English') {
             <h2>About me</h2>
@@ -46,7 +45,8 @@
                             technical expertise and creative thinking.</p>
                         }
                         @if (languageService.language == 'German') {
-                        <p>Neben dem Programmieren geniesse ich die Zusammenarbeit mit anderen, das Teilen von Wissen und
+                        <p>Neben dem Programmieren geniesse ich die Zusammenarbeit mit anderen, das Teilen von Wissen
+                            und
                             das Lernen aus verschiedenen Perspektiven. Ich bin der Überzeugung, dass die besten Lösungen
                             aus einer Kombination von technischem Fachwissen und kreativem Denken entstehen.</p>
                         }
