--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -23,7 +23,8 @@
                                 @if (languageService.language == 'German') {
                                 <p class="verticalText ichbin" [class.animationRotation]="isVisible">Ich bin</p>
                                 }
-                                <h3 class="title-name" [class.animationSlideInRight]="isVisible">Pirathib Mahalingam</h3>
+                                <h3 class="title-name" [class.animationSlideInRight]="isVisible">Pirathib Mahalingam
+                                </h3>
                                 @if (languageService.language == 'English') {
                                 <p class="title-profession" [class.typewriter]="isVisible">FRONTEND DEVELOPER</p>
                                 }
@@ -59,7 +60,7 @@
                     </div>
                 </div>
                 <div class="scroll-shadow-div">
-                    <div class="scroll-div" [class.animationOscillation]="isVisible" >
+                    <div class="scroll-div" [class.animationOscillation]="isVisible">
                         <div class="scroll-section">
                             @if (languageService.language == 'English') {
                             <p>Scroll down</p>
@@ -75,8 +76,7 @@
                     </div>
                 </div>
             </div>
-            <!-- <img src="assets/img/atf-shape.svg" alt="Shape" class="shape" draggable="false"> -->
-            <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile" draggable="false">  
+            <img src="assets/img/atf-shape-mobile.svg" alt="Shape" class="shape-mobile" draggable="false">
         </div>
     </div>
 </div>
