--- a/src/app/work/work-mobile.component.scss
+++ b/src/app/work/work-mobile.component.scss
@@ -1,7 +1,3 @@
-@media screen and (max-width: 1440px) {
-
-}
-
 @media screen and (max-width: 1200px) {
     .work-div {
         gap: 74px;
@@ -55,7 +51,7 @@
         align-items: center;
 
         h6 {
-            width: 263px; ////////////////////////////////////////////////////////////////////////////////
+            width: 263px;
         }
 
         p {
@@ -77,7 +73,7 @@
 
     h4 {
         text-align: center;
-    }  
+    }
 }
 
 @media screen and (max-width: 768px) {
@@ -94,12 +90,4 @@
     button {
         padding: 15px 14px;
     }
-}
-
-@media screen and (max-width: 375px) {
-
-}
-
-@media screen and (max-width: 320px) {
-
 }
