--- a/src/app/contact/contact-mobile.component.scss
+++ b/src/app/contact/contact-mobile.component.scss
@@ -25,6 +25,10 @@
         bottom: 32px !important;
     }
 
+    .warn-symbol-txt {
+        bottom: 44px;
+    }
+
     .contact-undersection {
         flex-direction: column;
     }
