--- a/src/app/above-the-fold/above-the-fold.component.html
+++ b/src/app/above-the-fold/above-the-fold.component.html
@@ -53,7 +53,7 @@
                             <a href="https://github.com/mahapiri" target="_blank"><img src="assets/img/github-btn.svg"
                                     alt="Github"></a>
                             <a href="#contact"><img src="assets/img/mail-btn.svg" alt="E-Mail"></a>
-                            <a href="https://linkedin.com" target="_blank"><img src="assets/img/linkedin-btn.svg"
+                            <a href="https://www.linkedin.com/in/mahapiri/" target="_blank"><img src="assets/img/linkedin-btn.svg"
                                     alt="Linkedin"></a>
                         </div>
                         <a href="#contact" class="mail-div">hello&#64;pirathib-mahalingam.ch</a>
