--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -5,6 +5,8 @@
     scroll-margin-top: 0px;
     padding-bottom: 114px;
     overflow-y: clip;
+    position: relative;
+    z-index: 4;
 }
 
 .contact-content {
