--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -4,6 +4,8 @@
     scroll-margin-top: 114px;
     margin-top: 114px;
     overflow-x: clip;
+    position: relative;
+    z-index: 4;
 }
 
 .portfolio-content {
