--- a/src/app/above-the-fold/above-the-fold.component.scss
+++ b/src/app/above-the-fold/above-the-fold.component.scss
@@ -11,7 +11,6 @@
 
 .shape-content {
     width: 100vw;
-    max-width: 2876px;
     position: absolute;
     z-index: 3;
 }
@@ -21,17 +20,15 @@
     max-width: 1440px;
 }
 
-.shape-div {
-    width: 100%;
-}
 
 .shape {
     width: 100%;
     position: relative;
-    bottom: -515px;
+    // bottom: -515px;
     z-index: 2;
     -webkit-user-select: none;
     user-select: none;
+    object-fit: cover;
 }
 
 .shape-mobile {
