--- a/src/app/my-skills/my-skills.component.scss
+++ b/src/app/my-skills/my-skills.component.scss
@@ -3,6 +3,8 @@
     justify-content: center;
     scroll-margin-top: 114px;
     margin-top: 120px;
+    position: relative;
+    z-index: 4;
 }
 
 .skills-section {
