--- a/src/app/my-skills/my-skills-mobile.component.scss
+++ b/src/app/my-skills/my-skills-mobile.component.scss
@@ -10,11 +10,16 @@
     }
 
     .icon-div {
-        margin-left: unset;
-        padding: 70px 25px;
-        gap: 54px;
+        display: flex;
         justify-content: center;
-        margin-bottom: 100px;
+        align-items: center;
+        width: 100%;
+    }
+
+    .icon-content {
+        padding-top: 70px;
+        padding-bottom: 130px;
+        justify-content: space-around;
     }
 
     .title-content {
@@ -36,7 +41,7 @@
     }
 
     .button-div {
-        top: 435px;
+        top: 397px;
     }
 
     .shadow {
@@ -44,33 +49,13 @@
     }
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1242px) {
     .skills-section {
-        max-width: 1200px;
-    }
-
-    .icon-div {
-        gap: 70px;
-    }
-}
-
-@media screen and (max-width: 1024px) {
-    .skills-section {
-        max-width: 1011px;
+        max-width: 1242px;
     }
 
     .button-div {
-        top: 635px;
-    }
-}
-
-@media screen and (max-width: 1100px) {
-    .skills-section {
-        max-width: 1100px;
-    }
-
-    .icon-div {
-        gap: 40px;
+        top: 553px;
     }
 }
 
@@ -79,37 +64,24 @@
         max-width: 1024px;
     }
 
-    .icon-div {
-        gap: 100px;
-    }
-
     .title-header {
         p {
             width: 338px;
         }
     }
 
-    .icons {
-        width: 77px;
-
-        p {
-            font-size: 14px;
-            line-height: 16.8px;
-        }
-    }
-
-    .icon {
-        height: 100px;
-        display: flex;
-        align-items: flex-end;
-
-        img {
-            height: 45px;
-        }
-    }
-
     .shadow {
         right: 534px;
+    }
+}
+
+@media screen and (max-width: 820px) {
+    .skills-section {
+        max-width: 820px;
+    }
+
+    .button-div {
+        top: 709px;
     }
 }
 
@@ -129,7 +101,28 @@
         right: -23px;
     }
 
+    .icon-content {
+        gap: 30px;
+    }
+
+    .icons {
+        p {
+            font-size: 14px;
+            line-height: 16.8px;
+        }
+    }
+
+    .icon {
+        display: flex;
+        align-items: flex-end;
+
+        img {
+            height: 45px;
+        }
+    }
+
     .button-div {
+        top: 380px;
 
         button {
             font-size: 16px;
@@ -146,13 +139,13 @@
     }
 }
 
-@media screen and (max-width: 707px) {
+@media screen and (max-width: 727px) {
     .skills-section {
-        max-width: 707px;
+        max-width: 727px;
     }
 
     .button-div {
-        top: 835px;
+        top: 510px;
     }
 }
 
@@ -162,12 +155,18 @@
         max-width: 530px;
     }
 
-    .button-div {
-        top: 1235px;
-    }
-
     .shadow {
         right: 234px;
+    }
+}
+
+@media screen and (max-width: 491px) {
+    .skills-section {
+        max-width: 491px;
+    }
+
+    .button-div {
+        top: 640px;
     }
 }
 
@@ -177,13 +176,13 @@
     }
 }
 
-@media screen and (max-width: 354px) {
+@media screen and (max-width: 373px) {
     .skills-section {
-        max-width: 354px;
+        max-width: 373px;
     }
 
     .button-div {
-        top: 2235px;
+        top: 898px;
     }
 }
 
@@ -207,5 +206,15 @@
 @media screen and (max-width: 320px) {
     .skills-section {
         max-width: 320px;
+    }
+}
+
+@media screen and (max-width: 255px) {
+    .skills-section {
+        max-width: 255px;
+    }
+
+    .button-div {
+        top: 1549px;
     }
 }
