--- a/src/app/my-skills/my-skills.component.html
+++ b/src/app/my-skills/my-skills.component.html
@@ -2,10 +2,12 @@
     <div class="skills-section">
         <img src="assets/img/shadows/my-skills.svg" alt="Shadow" class="shadow">
         <div class="skills-content">
-            <div class="icon-div" [class.animationSlideInLeft]="isVisible">
-                <div *ngFor="let icon of icons" class="icons">
-                    <a class="icon"><img src="{{ 'assets/img/skill-icons/' + icon.source }}" alt="{{ icon.name }}"></a>
-                    <p>{{ icon.name }}</p>
+            <div class="icon-div">
+                <div class="icon-content" [class.animationSlideInLeft]="isVisible">
+                    <div *ngFor="let icon of icons" class="icons">
+                        <a class="icon"><img src="{{ 'assets/img/skill-icons/' + icon.source }}" alt="{{ icon.name }}"></a>
+                        <p>{{ icon.name }}</p>
+                    </div>
                 </div>
             </div>
             <div class="title-content">
