--- a/src/app/portfolio/portfolio-mobile.component.scss
+++ b/src/app/portfolio/portfolio-mobile.component.scss
@@ -15,6 +15,11 @@
     .shadow-2 {
         left: 901px;
     }
+
+    .title::after {
+        right: -525px;
+        width: 520px;
+    }
 }
 
 @media screen and (max-width: 1024px) {
@@ -112,6 +117,11 @@
 
     .shadow-2 {
         left: 201px;
+    }
+
+    .title::before {
+        left: -28px;
+        width: 20px;
     }
 }
 
