fixed footer at imprint and privacy

--- a/src/app/privacy-policy/privacy-policy.component.scss
+++ b/src/app/privacy-policy/privacy-policy.component.scss
@@ -10,6 +10,7 @@
     width: 100%;
     max-width: 1440px;
     height: 100%;
+    min-height: calc(100vh - 412px);
     padding: 37px 100px;
     display: flex;
     flex-direction: column;
